feat(auth): Logout added.

--- a/templates/login.html
+++ b/templates/login.html
@@ -26,6 +26,10 @@
 
             {{ form.submit() }}
         </form>
+        <!-- logout -->
+        <form method="post" action="{{ url_for('logout')}}">
+            <button type="submit">Logout</button>
+        </form>
        
     </center>
 </body>
