minor changes added a register link in login page if the user has not yet registered, it will redirect to register page....

--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,8 @@
         <form method="post" action="{{ url_for('logout')}}">
             <button type="submit">Logout</button>
         </form>
-       
+       <!-- New user -->
+        <p>Don't have any account? <a href="{{ url_for('register')}}">Register</a></p>
     </center>
 </body>
 </html>
