--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <center>
-        <h2>Login</h2>
+        <h1 class="login-title">Login</h1>
         <!-- flash messages -->
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -20,10 +20,10 @@
         <form method="POST" action="{{ url_for('login')}}">
             {{ form.hidden_tag() }}
             {{ form.username.label}} <br>
-            {{ form.username(size=20,placeholder='Enter the username') }} <br><br>
+            {{ form.username(size=20,placeholder="Enter the username") }} <br><br>
 
             {{ form.password.label }} <br>
-            {{ form.password(size=20,placeholder='Enter the password') }} <br><br>
+            {{ form.password(size=20,placeholder="Enter the password") }} <br><br>
 
             {{ form.submit() }}
         </form>
