feat(If user could/t login 3 times in a row, He will be redirected to the blocked page... working on this feature not fullu implented )

--- a/templates/show_habits.html
+++ b/templates/show_habits.html
@@ -44,7 +44,7 @@
                         {% endif %}
 
                         <form action="{{ url_for('remove',id=data[0])}}">
-                            <button type="submit">Remove Habit</button>
+                            <button type="submit">Remove</button>
                         </form>
                     </td>
                     
